// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`objectStructureTransformer > renders a complex API response object 1`] = `
{
  "$ref": "#/definitions/Value",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "Value": {
      "additionalProperties": false,
      "properties": {
        "metadata": {
          "additionalProperties": {
            "anyOf": [
              {
                "type": "string",
              },
              {
                "type": "number",
              },
              {
                "type": "boolean",
              },
            ],
          },
          "propertyNames": {
            "type": "string",
          },
          "type": "object",
        },
        "orders": {
          "items": {
            "additionalProperties": false,
            "properties": {
              "id": {
                "minLength": 1,
                "pattern": "^\\S.*\\S$|^\\S$",
                "type": "string",
              },
              "status": {
                "anyOf": [
                  {
                    "const": "pending",
                    "type": "string",
                  },
                  {
                    "const": "paid",
                    "type": "string",
                  },
                  {
                    "const": "cancelled",
                    "type": "string",
                  },
                ],
              },
              "total": {
                "minimum": 0,
                "type": "number",
              },
            },
            "required": [
              "id",
              "total",
              "status",
            ],
            "type": "object",
          },
          "maxItems": 20,
          "type": "array",
        },
        "user": {
          "additionalProperties": false,
          "properties": {
            "id": {
              "format": "uuid",
              "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
              "title": "UserId",
              "type": "string",
            },
            "profile": {
              "anyOf": [
                {
                  "additionalProperties": false,
                  "properties": {
                    "kind": {
                      "const": "company",
                      "type": "string",
                    },
                    "vatNumber": {
                      "minLength": 1,
                      "pattern": "^\\S.*\\S$|^\\S$",
                      "type": "string",
                    },
                  },
                  "required": [
                    "kind",
                    "vatNumber",
                  ],
                  "type": "object",
                },
                {
                  "additionalProperties": false,
                  "properties": {
                    "birthYear": {
                      "maximum": 2100,
                      "minimum": 1900,
                      "type": "integer",
                    },
                    "kind": {
                      "const": "person",
                      "type": "string",
                    },
                  },
                  "required": [
                    "kind",
                    "birthYear",
                  ],
                  "type": "object",
                },
              ],
            },
            "role": {
              "anyOf": [
                {
                  "const": "admin",
                  "type": "string",
                },
                {
                  "const": "seller",
                  "type": "string",
                },
                {
                  "const": "customer",
                  "type": "string",
                },
              ],
            },
          },
          "required": [
            "id",
            "role",
            "profile",
          ],
          "type": "object",
        },
      },
      "required": [
        "user",
        "orders",
        "metadata",
      ],
      "type": "object",
    },
  },
}
`;

exports[`objectStructureTransformer > renders a recursive object tree 1`] = `
{
  "$ref": "#/definitions/Category",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "Category": {
      "$ref": "#/definitions/RecursiveName0",
    },
    "RecursiveName0": {
      "additionalProperties": false,
      "properties": {
        "children": {
          "items": {
            "$ref": "#/definitions/RecursiveName0",
          },
          "maxItems": 10,
          "type": "array",
        },
        "id": {
          "format": "uuid",
          "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
          "type": "string",
        },
        "name": {
          "minLength": 1,
          "pattern": "^\\S.*\\S$|^\\S$",
          "type": "string",
        },
      },
      "required": [
        "id",
        "name",
        "children",
      ],
      "type": "object",
    },
  },
}
`;

exports[`objectStructureTransformer > renders an object structure 1`] = `
{
  "$ref": "#/definitions/Value",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "Value": {
      "additionalProperties": false,
      "properties": {
        "email": {
          "format": "email",
          "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
          "type": "string",
        },
        "enabled": {
          "type": "boolean",
        },
        "id": {
          "format": "uuid",
          "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
          "type": "string",
        },
      },
      "required": [
        "id",
        "email",
        "enabled",
      ],
      "type": "object",
    },
  },
}
`;

exports[`objectStructureTransformer > throws when a property structure is not supported 1`] = `[Error: Error during the render of a data structure as a JsonSchema.]`;
